src/test/deca/syntax/invalid/parser/with_object/method_type.deca

class A { 0aa a (){} }
